Update insight on Accessing Data and EDA

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "zjCBk1BI8DC1",
         "colab": {
@@ -546,7 +546,7 @@
         "id": "jQm2KrOCiFOU",
         "outputId": "b662b837-b42b-4fa2-9475-8b98ae649387"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -977,7 +977,7 @@
         },
         "outputId": "338edb39-1040-4c7f-e5e5-976e6818de49"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1034,7 +1034,7 @@
         "id": "XCRei75ijtCx",
         "outputId": "10e85256-dcd3-4169-a150-a767fe5f6fde"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1186,7 +1186,7 @@
         "id": "raFV-SVskWlk",
         "outputId": "9f81c0f3-399b-417f-bc83-2277e031a18c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1219,7 +1219,7 @@
         "id": "Uw8cSycQkx3k",
         "outputId": "1bbd7721-f77c-4a17-d7bc-f3ef5100fc25"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1684,8 +1684,17 @@
       "cell_type": "markdown",
       "source": [
         "**Insight:**\n",
-        "- Melihat kondisi data di tabel all_stations_df\n",
-        "- Memeriksa Missing Value dan Duplikasi Data pada tabel all_stations_df"
+        "- Melihat kondisi data di tabel `all_stations_df`\n",
+        "- Data yang Hilang:\n",
+        " - Kolom PM2.5 memiliki 8.093 nilai yang hilang.\n",
+        " - Kolom PM10 memiliki 6.068 nilai yang hilang.\n",
+        " - Kolom SO2 memiliki 8.514 nilai yang hilang.\n",
+        " - Kolom NO2 memiliki 11.448 nilai yang hilang.\n",
+        " - Kolom CO memiliki jumlah nilai hilang yang paling besar, yaitu 19.300.\n",
+        " - Kolom O3 juga memiliki jumlah nilai hilang yang cukup signifikan, yaitu 12.548.\n",
+        " - Untuk variabel meteorologi seperti TEMP, PRES, DEWP, dan RAIN, jumlah nilai yang hilang relatif kecil dibandingkan polutan udara, masing-masing hanya beberapa ratus.\n",
+        " - Kolom wd (arah angin) memiliki 1.663 nilai hilang, sementara WSPM (kecepatan angin) memiliki 276 nilai yang hilang.\n",
+        "- Tidak ada Data Ganda pada `all_stations_df`"
       ],
       "metadata": {
         "id": "7dtxhAPrkhPL"
@@ -1712,7 +1721,7 @@
         "id": "eT7MsLLZn3cB",
         "outputId": "d2781d8f-842a-45e5-dcf5-249a8ade4fc7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1764,7 +1773,7 @@
         },
         "outputId": "0019bc0f-b723-4a43-d2ea-078ba9ee7060"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1831,7 +1840,7 @@
         "id": "dWOWp_C5owvw",
         "outputId": "82679bf0-a228-463e-ec1c-5d52ad31aa2e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1874,7 +1883,20 @@
       "source": [
         "**Insight:**\n",
         "- Melihat persentasi Missing Value pada tabel all_stations_df\n",
-        "- Membersihkan Missing Value pada tabel all_stations_df"
+        "- Membersihkan Missing Value pada tabel all_stations_df\n",
+        "- Mengisi Nilai yang Hilang untuk Kolom Numerik:\n",
+        "\n",
+        "  - Untuk kolom-kolom dengan tipe data numerik, seperti **PM2.5, PM10, SO2, NO2, CO, O3, TEMP, PRES, DEWP, RAIN, dan WSPM**, nilai yang hilang diisi dengan **rata-rata (mean)** dari kolom yang bersangkutan.\n",
+        "    - Metode ini bertujuan untuk mempertahankan jumlah data sebanyak mungkin tanpa menghapus baris yang memiliki nilai hilang, sehingga analisis tetap bisa dilakukan dengan dataset yang lengkap.\n",
+        "\n",
+        "- Mengisi Nilai yang Hilang untuk Kolom Kategorikal:\n",
+        "\n",
+        "  - Untuk kolom wd yang berisi data kategorikal (arah angin), nilai yang hilang diisi dengan modus, yaitu nilai yang paling sering muncul di kolom tersebut.\n",
+        "      - Hal ini dilakukan karena modus merupakan representasi yang paling umum dari data kategorikal, sehingga dapat mengisi nilai hilang dengan pilihan yang masuk akal berdasarkan distribusi data.\n",
+        "\n",
+        "- Memastikan Tidak Ada Lagi Missing Values:\n",
+        "\n",
+        "    - Setelah proses imputasi selesai, dilakukan pengecekan ulang terhadap jumlah missing values menggunakan all_stations_df.isna().sum(). Hal ini bertujuan untuk memastikan bahwa semua nilai hilang telah diisi dan tidak ada lagi missing values yang tersisa dalam dataset."
       ],
       "metadata": {
         "id": "Q_5ejIqckiSP"
@@ -1900,7 +1922,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "e9CQCZjk8DC2",
         "colab": {
@@ -1978,7 +2000,7 @@
         "id": "o8SHdyySzu7p",
         "outputId": "48cc39d6-64a0-42ad-a2e0-b2becae3b59f"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2007,7 +2029,7 @@
         "id": "E7QX2TuP0AX6",
         "outputId": "c7001d59-64d3-448b-a24a-0c91e9598551"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2047,7 +2069,7 @@
         "id": "-ZTIfJuH0P_m",
         "outputId": "a4e7d281-34db-4066-bf12-e5a110f327b1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2088,7 +2110,7 @@
         "id": "JYoU4fW50lkM",
         "outputId": "bbca9bb3-5853-4968-e131-840a7bb62d6f"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2120,7 +2142,7 @@
         "id": "_d5k9aBX1NCM",
         "outputId": "b77cd29f-9883-4498-866f-22cde6cfeb2d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2151,7 +2173,7 @@
         "id": "aMwo9d1P1X2x",
         "outputId": "1b51cb96-0198-446b-8604-bf41690c27ff"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2192,7 +2214,7 @@
         "id": "y7RKfZ941gvV",
         "outputId": "88d8a722-d15a-4103-d36c-cf75feebf7a7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2232,7 +2254,7 @@
         "id": "gDO5WOHg1oNE",
         "outputId": "8f06fe39-cb47-48f7-b2cb-774079386114"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2273,7 +2295,7 @@
         "id": "9LzSjT7D1ubX",
         "outputId": "27cb9e40-30c4-4230-ee1d-14a00fa0f2ce"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2313,7 +2335,7 @@
         "id": "98HoEj0x1z18",
         "outputId": "64198fd4-5a2b-4293-8de7-2c3efb49d9a1"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2353,7 +2375,7 @@
         "id": "e2lA1CyU12yv",
         "outputId": "46cc6a15-afcf-49b0-d7f4-e8bd9f29c26f"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2385,7 +2407,7 @@
         "id": "0VqyjBtZ175P",
         "outputId": "0040c3d1-37cf-4954-aa91-00be84a20aa1"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2406,7 +2428,40 @@
       "cell_type": "markdown",
       "source": [
         "**Insight:**\n",
-        "- Mengeksplorasi data tabel `all_stations_df`"
+        "\n",
+        "1. Statistika Deskriptif:\n",
+        "\n",
+        "    Data terdiri dari 385.704 baris dengan informasi terkait polutan udara, tanggal, suhu, tekanan, dan lainnya.\n",
+        "\n",
+        "    Rata-rata nilai **PM2.5 sebesar 79.42**, dan **PM10 sebesar 103.30**, dengan nilai maksimum masing-masing mencapai 999.\n",
+        "\n",
+        "    Rata-rata nilai polutan lain seperti SO2, NO2, CO, dan O3 juga disertakan, dengan nilai rata-rata **SO2 sebesar 15.87**, **NO2 sebesar 50.16**, **CO sebesar 1222.20, dan O3 sebesar 57.34.**\n",
+        "\n",
+        "\n",
+        "2. Stasiun Unik:\n",
+        "\n",
+        "    **Terdapat 11 stasiun pemantau polusi di dataset**, seperti 'Aotizhongxin', 'Changping', 'Dongsi', dan lainnya.\n",
+        "\n",
+        "\n",
+        "3. Distribusi PM2.5 Berdasarkan Stasiun:\n",
+        "\n",
+        "    **Nilai PM2.5 bervariasi di setiap stasiun**, dengan stasiun **'Dongsi' memiliki rata-rata PM2.5 tertinggi (86.05)** dan stasiun **'Dingling' memiliki rata-rata terendah (66.29).**\n",
+        "\n",
+        "4. Distribusi PM10 Berdasarkan Stasiun:\n",
+        "\n",
+        "    Sama halnya dengan PM2.5, distribusi **PM10 bervariasi di setiap stasiun**, dengan stasiun **'Wanshouxigong' memiliki rata-rata PM10 tertinggi (112.10)** dan stasiun **'Dingling' memiliki rata-rata terendah (84.11).**\n",
+        "\n",
+        "5. Median dan Kuartil:\n",
+        "\n",
+        "    Median PM2.5 adalah 56.0 dengan kuartil pertama (25%) 21.0, kuartil kedua (50%) 56.0, dan kuartil ketiga (75%) 109.0.\n",
+        "\n",
+        "    Median PM10 adalah 82.0 dengan kuartil pertama 36.0, kuartil kedua 82.0, dan kuartil ketiga 142.0.\n",
+        "\n",
+        "6. Rata-rata Polutan Berdasarkan Bulan:\n",
+        "\n",
+        "    Menampilkan rata-rata nilai polutan PM2.5, PM10, SO2, NO2, CO, dan O3 per bulan.\n",
+        "    \n",
+        "    Hasil ini **memberi gambaran yang lebih jelas mengenai distribusi polutan di berbagai stasiun serta tren berdasarkan waktu (seperti median, kuartil, dan perbandingan bulan).**"
       ],
       "metadata": {
         "id": "th_Lzl2Fkj9O"
@@ -2432,7 +2487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "1swJUdAD8DC2",
         "colab": {
@@ -2503,7 +2558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "Go0lCsvO8DC2",
         "colab": {
@@ -2600,7 +2655,7 @@
         "id": "KwLWKvB42phY",
         "outputId": "0577600f-0551-4bb1-92b2-ee332b89b0d4"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2613,6 +2668,41 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insight:**\n",
+        "1. Perbedaan kualitas udara antara musim panas dan musim dingin:\n",
+        "  - Rata-rata PM2.5 **pada musim dingin (94.70) lebih tinggi dibandingkan musim panas (64.86).**\n",
+        "  - Rata-rata **PM10 juga lebih tinggi pada musim dingin (113.20) dibandingkan musim panas (79.74).**\n",
+        "  - Standar deviasi lebih tinggi di musim dingin, menunjukkan variabilitas polutan yang lebih besar.\n",
+        "\n",
+        "2. Hasil analisis menunjukkan bahwa hubungan antara curah hujan (RAIN) dan tingkat polusi udara (PM2.5 dan PM10) memiliki korelasi yang sangat lemah:\n",
+        "\n",
+        "  - Korelasi antara RAIN dan PM2.5: -0.014\n",
+        "  - Korelasi antara RAIN dan PM10: -0.026\n",
+        "  - Scatter plot juga menunjukkan bahwa **curah hujan tidak memiliki pengaruh signifikan terhadap polusi udara, karena tidak ada pola jelas dalam distribusi data.**\n",
+        "\n",
+        "3. Berdasarkan analisis sebelumnya, kesimpulan mengenai pengaruh arah angin (wd) dan kecepatan angin (WSPM) terhadap tingkat polusi PM2.5:\n",
+        "\n",
+        "  - Kecepatan Angin (WSPM):\n",
+        "\n",
+        "    - Kecepatan angin (WSPM) memiliki korelasi lemah dengan PM2.5. Ini menunjukkan bahwa **kecepatan angin mungkin tidak berpengaruh signifikan dalam menurunkan atau meningkatkan tingkat polusi PM2.5.**\n",
+        "\n",
+        "    Secara umum, angin cenderung membantu mendispersikan polutan di udara, namun dalam dataset ini, pengaruh tersebut tampaknya tidak terlalu kuat.\n",
+        "\n",
+        "  - Arah Angin (wd):\n",
+        "\n",
+        "    - Distribusi PM2.5 berdasarkan arah angin menunjukkan bahwa arah angin tertentu dapat mempengaruhi tingkat polusi. **Arah angin bisa membawa polutan dari sumber tertentu atau malah mengurangi konsentrasi polutan di suatu lokasi.**\n",
+        "  \n",
+        "  Perlu dilihat lebih mendalam **distribusi arah angin yang menyebabkan konsentrasi PM2.5 lebih tinggi atau rendah untuk memahami tren polusi berdasarkan kondisi angin di lokasi tertentu.**\n",
+        "  \n",
+        "  Secara keseluruhan, **kecepatan angin mungkin memiliki pengaruh yang kecil, namun arah angin dapat lebih berperan dalam menentukan bagaimana polutan bergerak di suatu area.**"
+      ],
+      "metadata": {
+        "id": "dbuKI1h6Wtfj"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2659,7 +2749,7 @@
         },
         "outputId": "f5902290-386c-46e6-c32e-697442d059fb"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2701,7 +2791,7 @@
         "id": "FrK8Hn9f5YxX",
         "outputId": "e534b8a0-9193-411c-f8ac-5d30db294f31"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2765,7 +2855,7 @@
         "id": "m6woV29V60nE",
         "outputId": "31aebbcc-d4b5-4e17-8131-157df6e4b818"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
